<?xml version="1.0"?>
<package>
  <name>eyesxing_faces</name>
  <version>1.0.0</version>
  <description>Eyes Xing faces Provides video processing of faces.</description>

  <author email="robin.knight@roadnarrows.com">Robin Knight</author>
  <maintainer email="robin.knight@roadnarrows.com">Robin Knight</maintainer>
  <license>MIT</license>

  <url type="website">http://github.com/roadnarrows-robotics/eyesxing</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eyesxing_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>eyesxing_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
