<package>
  <name>eyesxing_msgs</name>
  <version>1.0.0</version>
  <description>
    This package defines messages for commonly used by the Eyes Xing
    meta-package.
  </description>
  <maintainer email="robin.knight@roadnarrows.com">Robin Knight</maintainer>
  <license>MIT</license>

  <url>http://github.com/roadnarrows-robotics/eyesxing/eyesxing_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
